--- a/calendar/lightning/themes/windows/lightning.css
+++ b/calendar/lightning/themes/windows/lightning.css
@@ -86,6 +86,10 @@ radio[pane=paneLightning] {
   -moz-image-region: auto;
 }
 
+#newMsgButton-mail-menuitem {
+  list-style-image: url(chrome://messenger/skin/icons/mail-toolbar.svg#newmsg);
+}
+
 #tabs-toolbar[brighttext] #calendar-tab-button {
   list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#calendar-tab-inverted);
 }
@@ -159,6 +163,7 @@ radio[pane=paneLightning] {
   list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#priority);
 }
 
+#newMsgButton-mail-menuitem > .menu-iconic-left > .menu-iconic-icon,
 #newMsgButton-calendar-menuitem > .menu-iconic-left > .menu-iconic-icon,
 #newMsgButton-task-menuitem > .menu-iconic-left > .menu-iconic-icon {
   width: 18px;
@@ -228,6 +233,10 @@ radio[pane=paneLightning] {
   #newMsgButton-task-menuitem {
     list-style-image: url(chrome://calendar-common/skin/calendar-toolbar.svg#task-tab-flat);
     -moz-image-region: auto;
+  }
+
+  #newMsgButton-mail-menuitem {
+    list-style-image: url(chrome://messenger/skin/icons/mail-toolbar.svg#newmsg-flat);
   }
 
   #calendar-status-todaypane-button > stack > .toolbarbutton-icon-begin {
