--- a/mail/themes/linux/mail/compose/messengercompose.css
+++ b/mail/themes/linux/mail/compose/messengercompose.css
@@ -73,48 +73,92 @@
 /* ::::: primary toolbar buttons ::::: */
 
 #button-send {
-  list-style-image: url("chrome://messenger/skin/icons/send.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#send");
 }
 
 #button-contacts {
-  list-style-image: url("chrome://messenger/skin/icons/address.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#contacts");
   -moz-image-region: auto !important;
 }
 
 #spellingButton {
-  list-style-image: url("chrome://messenger/skin/icons/spelling.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#spelling");
 }
 
 #button-attach {
-  list-style-image: url("chrome://messenger/skin/icons/attach.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#attach");
 }
 
 #button-security {
-  list-style-image: url("chrome://messenger/skin/icons/security.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#security");
 }
 
 #button-save {
-  list-style-image: url("chrome://messenger/skin/icons/save.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#save");
 }
 
 #quoteButton {
-  list-style-image: url("chrome://messenger/skin/icons/quote.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#quote");
 }
 
 #cut-button {
-  list-style-image: url("chrome://messenger/skin/icons/cut.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#cut");
 }
 
 #copy-button {
-  list-style-image: url("chrome://messenger/skin/icons/copy.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#copy");
 }
 
 #paste-button {
-  list-style-image: url("chrome://messenger/skin/icons/paste.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#paste");
 }
 
 #button-print {
-  list-style-image: url("chrome://messenger/skin/icons/print.svg");
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#print");
+}
+
+toolbar[brighttext] #button-send {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#send-inverted");
+}
+
+toolbar[brighttext] #button-contacts {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#contacts-inverted");
+}
+
+toolbar[brighttext] #spellingButton {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#spelling-inverted");
+}
+
+toolbar[brighttext] #button-attach {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#attach-inverted");
+}
+
+toolbar[brighttext] #button-security {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#security-inverted");
+}
+
+toolbar[brighttext] #button-save {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#save-inverted");
+}
+
+toolbar[brighttext] #quoteButton {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#quote-inverted");
+}
+
+toolbar[brighttext] #cut-button {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#cut-inverted");
+}
+
+toolbar[brighttext] #copy-button {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#copy-inverted");
+}
+
+toolbar[brighttext] #paste-button {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#paste-inverted");
+}
+
+toolbar[brighttext] #button-print {
+  list-style-image: url("chrome://messenger/skin/messengercompose/compose-toolbar.svg#print-inverted");
 }
 
 /* ::::: menulists on toolbar ::::: */
@@ -770,11 +814,11 @@ toolbarbutton.formatting-button {
 
 /** Stock icons for the menu items. */
 #menu_NewMessage {
-  list-style-image: url("chrome://messenger/skin/icons/newmsg.svg");
+  list-style-image: url("chrome://messenger/skin/icons/mail-toolbar.svg#newmsg");
 }
 
 #menu_NewContact {
-  list-style-image: url("chrome://messenger/skin/icons/addcontact.svg");
+  list-style-image: url("chrome://messenger/skin/addressbook/icons/addressbook-toolbar.svg#newcard");
 }
 
 #menu_SaveCmd {
